<resources>
    <string name="app_name">学生任务发布平台</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="team_organize">组团\n招人</string>
    <string name="find">寻物\n启事</string>
    <string name="help">跑腿\n代取</string>
    <string name="questions">问题\n求助</string>
    <string name="tip_please_account_number">请输入账户</string>
    <string name="tip_please_input_phone_number">请输入邮箱</string>
    <string name="tip_please_input_account_number">请输入账号</string>
    <string name="tip_phone_number_error">无效的邮箱！</string>
    <string name="tip_phone_account_error">无效的手机号！</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_mail_number">邮箱号码</string>
    <string name="title_account_number">手机号码</string>
    <string name="regex_mainl">^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_againt_password">请再次输入密码</string>
    <string name="tip_verify_code_error">请输入6位数验证码</string>
    <string name="tip_verify_password_error">密码错误</string>
    <string name="lab_verify_code">验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>
    <string name="title_login_register">注册</string>

    <string name="lab_select_all">全选</string>
    <string name="lab_submit">确定</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_askand_answer">DetailAskandAnswerActivity</string>
</resources>